--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Paul Manalang — Portfolio</title>
+<link rel="stylesheet" href="style.css" />
+</head>
+<body>
+<header class="navbar">
+<div class="logo">Paul Manalang</div>
+<nav>
+<ul>
+<li><a href="#home">Home</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#projects">Projects</a></li>
+<li><a href="#blog">Blog</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+</nav>
+</header>
+
+
+<!-- HOME SECTION -->
+<section id="home" class="section home">
+<h1>Paul Manalang</h1>
+<h2>Accountant and Automation & AI Tools Specialist</h2>
+<p>Data-driven accountant specializing in automation, Python, and business systems.</p>
+</section>
+
+
+<!-- ABOUT -->
+<section id="about" class="section">
+<h2>About Me</h2>
 <p>
 I am an accountant focused on building automation workflows, AI-driven business tools,
 and modern financial systems. I combine my accounting expertise with practical technology
 skills to create systems that save time, reduce errors, and scale operations.
 </p>
 </section>
-
 
 <!-- PROJECTS -->
 <section id="projects" class="section">
