--- a/index.html
+++ b/index.html
@@ -1,92 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Paul Manalang — Portfolio</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Paul Manalang — Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<header class="navbar">
-<div class="logo">Paul Manalang</div>
-<nav>
-<ul>
-<li><a href="#home">Home</a></li>
-<li><a href="#about">About</a></li>
-<li><a href="#projects">Projects</a></li>
-<li><a href="#blog">Blog</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
-</nav>
-</header>
+  <header class="navbar">
+    <div class="container">
+      <div class="brand">Paul Manalang</div>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main class="container">
+    <!-- Home -->
+    <section id="home" class="section home-section">
+      <h1>Paul Manalang</h1>
+      <h2>Accountant &amp; Automation & AI Tools Specialist</h2>
+      <p>Data‑driven accountant specializing in automation, Python, and business systems.</p>
+    </section>
 
-<!-- HOME SECTION -->
-<section id="home" class="section home">
-<h1>Paul Manalang</h1>
-<h2>Accountant and Automation & AI Tools Specialist</h2>
-<p>Data-driven accountant specializing in automation, Python, and business systems.</p>
-</section>
+    <!-- About -->
+    <section id="about" class="section about-section">
+      <h2>About Me</h2>
+      <p>
+        I am a data-driven accountant with a passion for building automation workflows,
+        leveraging Python, and integrating AI tools into business systems. My goal is to
+        streamline financial operations, reduce manual work, and unlock scalable efficiency
+        for organizations.
+      </p>
+    </section>
 
+    <!-- Projects -->
+    <section id="projects" class="section projects-section">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Project One</h3>
+          <p>Placeholder description for project one.</p>
+        </div>
+        <div class="project-card">
+          <h3>Project Two</h3>
+          <p>Placeholder description for project two.</p>
+        </div>
+        <div class="project-card">
+          <h3>Project Three</h3>
+          <p>Placeholder description for project three.</p>
+        </div>
+        <div class="project-card">
+          <h3>Project Four</h3>
+          <p>Placeholder description for project four.</p>
+        </div>
+      </div>
+    </section>
 
-<!-- ABOUT -->
-<section id="about" class="section">
-<h2>About Me</h2>
-<p>
-I am an accountant focused on building automation workflows, AI-driven business tools,
-and modern financial systems. I combine my accounting expertise with practical technology
-skills to create systems that save time, reduce errors, and scale operations.
-</p>
-</section>
+    <!-- Blog -->
+    <section id="blog" class="section blog-section">
+      <h2>Blog</h2>
+      <p>Coming soon: I will write about automation, accounting, business systems, and AI tools.</p>
+    </section>
 
-<!-- PROJECTS -->
-<section id="projects" class="section">
-<h2>Projects</h2>
-<div class="project-grid">
-<div class="project-card">
-<img src="assets/images/project1.jpg" alt="Project 1" />
-<h3>Project One</h3>
-<p>Placeholder description for project one.</p>
-</div>
-<div class="project-card">
-<img src="assets/images/project2.jpg" alt="Project 2" />
-<h3>Project Two</h3>
-<p>Placeholder description for project two.</p>
-</div>
-<div class="project-card">
-<img src="assets/images/project3.jpg" alt="Project 3" />
-<h3>Project Three</h3>
-<p>Placeholder description for project three.</p>
-</div>
-<div class="project-card">
-<img src="assets/images/project4.jpg" alt="Project 4" />
-<h3>Project Four</h3>
-<p>Placeholder description for project four.</p>
-</div>
-</div>
-</section>
+    <!-- Contact -->
+    <section id="contact" class="section contact-section">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:paul@example.com">paul@example.com</a></p>
+      <p>Socials: <a href="#">LinkedIn</a> | <a href="#">GitHub</a> | <a href="#">Twitter</a></p>
+    </section>
+  </main>
 
+  <footer class="footer">
+    <div class="container">
+      <p>© 2025 Paul Manalang</p>
+    </div>
+  </footer>
 
-<!-- BLOG -->
-<section id="blog" class="section">
-<h2>Blog</h2>
-<p>Coming soon—articles about automation, accounting, business systems, and AI tools.</p>
-</section>
-
-
-<!-- CONTACT -->
-<section id="contact" class="section">
-<h2>Contact</h2>
-<p>Email: paul@example.com</p>
-<p>Socials: Facebook | LinkedIn | GitHub (placeholders)</p>
-</section>
-
-
-<footer>
-<p>© 2025 Paul Manalang. All rights reserved.</p>
-</footer>
-
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
