--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Home -->
     <section id="home" class="section home-section">
       <h1>Paul Manalang</h1>
-      <h2>Accountant &amp; Automation & AI Tools Specialist</h2>
+      <h2>Accountant and Workflow Automation Specialist</h2>
       <p>Data‑driven accountant specializing in automation, Python, and business systems.</p>
     </section>
 
